--- a/apps/web-spatial/package.json
+++ b/apps/web-spatial/package.json
@@ -13,7 +13,7 @@
         "@radix-ui/react-tooltip": "^1.0.5",
         "@react-three/drei": "^9.96.1",
         "@react-three/fiber": "^8.18.0",
-        "@react-three/postprocessing": "^3.0.4",
+        "@react-three/postprocessing": "^2.16.2",
         "@tanstack/react-query": "^5.90.20",
         "ai": "^6.0.49",
         "class-variance-authority": "^0.7.0",
@@ -35,7 +35,7 @@
         "@types/react-dom": "^18.0.0",
         "autoprefixer": "^10.0.1",
         "eslint": "^8.0.0",
-        "eslint-config-next": "^16.1.4",
+        "eslint-config-next": "14.2.14",
         "postcss": "^8.0.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5.0.0"
