--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,28 @@
-node_modules/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+*.egg-info/
 .env
-.DS_Store
+
+# Node
+node_modules/
+.next/
+out/
+dist/
+
+# Logs
+*.log
+/tmp/
+
+# IDE
 .vscode/
 .idea/
-dist/
-build/
-coverage/
-*.log
-npm-debug.log*
-yarn-debug.log*
-.next/
-.turbo/
-.vercel/
-yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
